--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,160 @@
-.container {
+body {
+    margin: 0;
+}
+header, footer {
     background-color: #1F2937;
+    padding: 1em 13em;
 }
 
-a {
-    text-decoration: none;
+.logo {
+    font-size: 24px;
+    font-weight: 900;
     color: #F9FAF8;
 }
 
 .navbar {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     color: #F9FAF8;
-    justify-content: space-around;
-    text-align: center;
-    padding: 5px;
-    margin: 0;
 }
 
-.bx hero {
+.header-links ul {
     display: flex;
+    list-style-type: none;
+}
+.header-links ul li a {
+    text-decoration: none;
+    color: #F9FAF8;
+    margin-right: 20px;
+}
+
+
+.hero {
+    display: flex;
+    color: #F9FAF8;
+    align-items: center;
+}
+
+.hero-image {
+    height: 400px;
+    width: auto;
+    margin: 10px;
+}
+
+.hero-header {
+    font-size: 38px;
+}
+
+.hero-text {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.hero-signup {
+    background-color: #3882F6;
+    color: white;
+    font-size: 16px;
+    border: none;
+    border-radius: 8px;
+    width: 110px;
+    padding: 7px 1em;
+}
+
+main {
+    text-align: center;
+}
+
+main h2 {
+    font-size: 36px;
+}
+
+.square {
+    border: 4px solid #3882F6;
+    border-radius: 20px;
+    width: 160px;
+    height: 160px;
+}
+
+.card-container {
+    display: flex;
+    justify-content: center;
+    gap: 52px;
+}
+
+.card-text {
+    max-width: 170px;
+}
+
+.quote {
+    display: flex;
+    background-color: #E5E7EB;
+    justify-content: center;
+    align-items: center;
+    padding: 7em 13em;
+    margin-top: 50px;
+    flex-direction: column;
+}
+
+.quote em {
+    font-size: 36px;
+    max-width: 500px;
+}
+
+.quote p {
+    align-items: flex-end;
+    justify-content: flex-end;
+    font-weight: bold;
+}
+
+.end-signup {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5em 13em;
+}
+
+.signup-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #3882F6;
+    padding: 3em;
+    width: 100%;
+    border-radius: 10px;
+}
+
+strong {
+    font-size: 24px;
+    color: #FFF;
+}
+
+.signup-container button{
+    border: 2px solid #FFF;
+    color: white;
+    border-radius: 10px;
+    background-color: #3882F6;
+    padding: 7px 1em;
+    width: 110px;
+}
+
+strong {
+    font-size: 24px;
+    color: #FFF;
+    
+}
+
+a, .secondary {
+    font-size: 18px;
+    color: #E5E7EB;
+    text-decoration: none;
+}
+
+footer {
+    color: #E5E7EB;
+    color: #FFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2em 0;
 }
